--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -2,6 +2,6 @@
   <h1>About Me</h1>
 <p><img src="/images/blogImgs/about.jpg"></p> 
  <p>A little something about me.</p>
-<p>天津大学软件学院</p>
+<p>李立夫，毕业于天津大学软件学院</p>
 <p>热爱开发，曾在firefox实习做系统运维，现于NNIT做系统运维师，有一年实习经验以及一年工作经验</p>
 </section>
